logs/rtt.20260408-120242.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent2)
error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent`
  --> src/Chap39/BSTTreapStEph.rs:49:9
   |
49 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent as view_ord_consistent_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `view_ord_consistent` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_antisymmetry`
  --> src/Chap39/BSTTreapStEph.rs:50:9
   |
50 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_antisymmetry as lemma_cmp_antisymmetry_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_cmp_antisymmetry` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_antisymmetry_less`
  --> src/Chap39/BSTTreapStEph.rs:51:9
   |
51 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_antisymmetry_less as lemma_cmp_antisymmetry_less_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_cmp_antisymmetry_less` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_transitivity`
  --> src/Chap39/BSTTreapStEph.rs:52:9
   |
52 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_transitivity as lemma_cmp_transitivity_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_cmp_transitivity` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_eq_subst`
  --> src/Chap39/BSTTreapStEph.rs:53:9
   |
53 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_eq_subst as lemma_cmp_eq_subst_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_cmp_eq_subst` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_equal_congruent`
  --> src/Chap39/BSTTreapStEph.rs:54:9
   |
54 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_equal_congruent as lemma_cmp_equal_congruent_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_cmp_equal_congruent` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_equal_congruent_right`
  --> src/Chap39/BSTTreapStEph.rs:55:9
   |
55 | ...se crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_equal_congruent_right as lemma_cmp_equal_congruent_right_st;
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_cmp_equal_congruent_right` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_joined_right_gt_lk`
  --> src/Chap39/BSTTreapStEph.rs:56:9
   |
56 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_joined_right_gt_lk as lemma_joined_right_gt_lk_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_joined_right_gt_lk` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_joined_left_lt_rk`
  --> src/Chap39/BSTTreapStEph.rs:57:9
   |
57 |     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_joined_left_lt_rk as lemma_joined_left_lt_rk_st;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_joined_left_lt_rk` in `Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas`

warning: unexpected `cfg` condition name: `never`
    --> src/Chap43/OrderedTableStEph.rs:1060:15
     |
1060 |         #[cfg(never)] fn union_bypassed_r158() { let ghost old_tree = self.tree.inner@;
     |               ^^^^^
     |
     = help: expected names are: `docsrs`, `feature`, `test`, `verus_keep_ghost`, and `verus_keep_ghost_body` and 31 more
     = help: consider using a Cargo feature instead
     = help: or consider adding in `Cargo.toml` the `check-cfg` lint config for the lint:
              [lints.rust]
              unexpected_cfgs = { level = "warn", check-cfg = ['cfg(never)'] }
     = help: or consider adding `println!("cargo::rustc-check-cfg=cfg(never)");` to the top of the `build.rs`
     = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
     = note: requested on the command line with `-W unexpected-cfgs`

For more information about this error, try `rustc --explain E0432`.
warning: `apas-verus` (lib) generated 1 warning
error: could not compile `apas-verus` (lib) due to 9 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `apas-verus` (lib test) generated 1 warning (1 duplicate)
error: could not compile `apas-verus` (lib test) due to 9 previous errors; 1 warning emitted
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 11s
